--- a/sc-push.html
+++ b/sc-push.html
@@ -77,7 +77,13 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     init: function () {
       if (!window.PushNotification) {
-        return;
+        this._fails = (this._fails || 0) + 1;
+        if (this._fails > 10) {
+          this._fails = 0;
+          return;
+        }
+
+        return setTimeout(this.init.bind(this), 1000);
       }
 
       var config = {
