--- a/sc-push.html
+++ b/sc-push.html
@@ -67,6 +67,16 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
         type: String,
         value: undefined,
         notify: true
+      },
+
+      /**
+       * A string that contains the state of: 'init|success|error'
+       *
+       * @default 'init'
+       */
+      state: {
+        type: String,
+        value: 'init'
       }
 
     },
@@ -116,6 +126,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     },
 
     onRegistration: function (e) {
+      this.set('state', 'success');
       this.log('Successfully registered for push notifications', e);
       this.fire('registration', e);
 
@@ -130,6 +141,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     },
 
     onError: function (e) {
+      this.set('state', 'error');
       this.log(e.message);
       this.fire('error', e);
     },
@@ -139,6 +151,7 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
       var error = this.log.bind(this, 'Error while unregistering for push notifications');
 
       this.set('registrationId', undefined);
+      this.set('state', 'init');
 
       return this._push && this._push.unregister(success, error);
     },
