--- a/sc-push.html
+++ b/sc-push.html
@@ -10,7 +10,9 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 <link rel="import" href="../polymer/polymer.html" />
 
 <script>
+/* eslint-disable */
 (function () {
+  var CapacitorPush = ((window.Capacitor || {}).Plugins || {}).PushNotifications;
 
   window.Polymer({
     is: 'sc-push',
@@ -96,7 +98,37 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
     },
 
     init: function () {
-      if (!window.PushNotification) {
+      if (CapacitorPush) {
+        CapacitorPush.addListener('registration', function (token) {
+          this.onRegistration({ registrationId: token.value });
+        }.bind(this));
+
+        CapacitorPush.addListener('registrationError', function (error) {
+          this.onError({ message: JSON.stringify(error) });
+        }.bind(this));
+
+        CapacitorPush.addListener('pushNotificationReceived', function (notification) {
+          this.onNotification(notification);
+        }.bind(this));
+
+        CapacitorPush.addListener('pushNotificationActionPerformed', function (payload) {
+          this.onNotification(payload.notification);
+        }.bind(this));
+
+        CapacitorPush.requestPermission()
+          .then(function (result) {
+            if (result.granted) {
+              CapacitorPush.register();
+            }
+            else {
+              this.onError({ message: JSON.stringify(result) });
+            }
+          }.bind(this))
+          .catch(function (err) {
+            this.onError({ message: JSON.stringify(err) });
+          }.bind(this));
+      }
+      else if (!window.PushNotification) {
         this._fails = (this._fails || 0) + 1;
         if (this._fails > 10) {
           this._fails = 0;
@@ -105,30 +137,31 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
         return setTimeout(this.init.bind(this), 1000);
       }
+      else {
+        var config = Object.assign({}, this.config);
 
-      var config = Object.assign({}, this.config);
+        // Set defaults
+        config.android = config.android || {};
 
-      // Set defaults
-      config.android = config.android || {};
-
-      ['ios', 'android', 'windows'].forEach(function (platform) {
-        config[platform] = config[platform] || {};
-        Object.keys(this.defaultConfig[platform]).forEach(function (key) {
-          if (typeof config[platform][key] === 'undefined') {
-            config[platform][key] = this.defaultConfig[platform][key];
-          }
+        ['ios', 'android', 'windows'].forEach(function (platform) {
+          config[platform] = config[platform] || {};
+          Object.keys(this.defaultConfig[platform]).forEach(function (key) {
+            if (typeof config[platform][key] === 'undefined') {
+              config[platform][key] = this.defaultConfig[platform][key];
+            }
+          }.bind(this));
         }.bind(this));
-      }.bind(this));
 
-      if (typeof config.android.senderID === 'undefined' && this.gcmSenderId) {
-        config.android.senderID = this.gcmSenderId;
+        if (typeof config.android.senderID === 'undefined' && this.gcmSenderId) {
+          config.android.senderID = this.gcmSenderId;
+        }
+
+        this._push = window.PushNotification && window.PushNotification.init(config);
+
+        this._push.on('registration', this.onRegistration.bind(this));
+        this._push.on('notification', this.onNotification.bind(this));
+        this._push.on('error', this.onError.bind(this));
       }
-
-      this._push = window.PushNotification && window.PushNotification.init(config);
-
-      this._push.on('registration', this.onRegistration.bind(this));
-      this._push.on('notification', this.onNotification.bind(this));
-      this._push.on('error', this.onError.bind(this));
     },
 
     onRegistration: function (e) {
@@ -144,6 +177,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
     onNotification: function (e) {
       this.log('Push notification received', e);
+
+      if (CapacitorPush) {
+        CapacitorPush.removeAllDeliveredNotifications();
+      }
+
       this.fire('notification', e, { bubbles: false });
     },
 
@@ -159,6 +197,11 @@ subject to an additional IP rights grant found at http://polymer.github.io/PATEN
 
       this.set('registrationId', undefined);
       this.set('state', 'init');
+
+      if (CapacitorPush) {
+        CapacitorPush.removeAllDeliveredNotifications();
+        CapacitorPush.removeAllListeners();
+      }
 
       return this._push && this._push.unregister(success, error);
     },
